--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.15.4",
     "nodemon": "^1.18.4",
-    "nunjucks": "^3.0.1"
+    "nunjucks": "^3.0.1",
+    "pg": "^7.6.1"
   },
   "devDependencies": {
     "eslint": "^5.7.0",
