--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.15.4",
+    "foobar": "^1.1.0",
     "nodemon": "^v1.18.7",
     "nunjucks": "^3.0.1",
     "pg": "^7.6.1"
